commit version final de la V2

--- a/V0.2/style/style.css
+++ b/V0.2/style/style.css
@@ -32,4 +32,15 @@ a:hover{
 h1{
 	font-family :ARIAL, sans-serif;
 }
+#headerCom{
+	text-align: center;
+	border:1px solid white;
+	border-radius: 20%;
 
+}
+#date{
+	text-align: left;	
+}
+#header{
+	margin-bottom:5%;
+}
